<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="application.ucweb.proyectoipae.TerminosActivity">

    <ImageView
        android:id="@+id/iv_fondo_at"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@drawable/fondo_principal_final" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <include layout="@layout/toolbar_principal" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/efecto_toolbar_sombra" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".15"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:gravity="center"
                android:text="@string/terminos_condiciones"
                android:textSize="@dimen/texto_size6" />

            <View
                android:layout_width="250dp"
                android:layout_height="1dp"
                android:background="@color/color_plomo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".68"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvTerminos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/texto_size4"
                    tools:text="@string/texto_terminos_condiciones" />
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".18"
            android:gravity="center">

            <Button
                android:id="@+id/btnAceptar"
                style="@style/botonAzul"
                android:layout_height="wrap_content"
                android:text="@string/btn_aceptar" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
